# super_prompt_plugin_git

./: README.rst  pyproject.toml
super_prompt_plugin_git/: main.py
